Revision history for Perl extension Geo-Coordinates-GMap.

{{$NEXT}}

 - Require perl 5.8.1.
 - Simplify VERSION declarations.

0.08 2019-02-18T06:22:07Z

 - Migrate all the tests from Test::More to Test2::V0.
 - Migrate build tooling from Dist::Zilla to Minilla.

0.07 2014-11-29

 - Support the scale argument in gmap_tile_xy() in order to produce
   high-res tiles.

0.05 2011-03-08

 - Adjust depencies so that Perl 5.6.2 isn't tested with its old
   version of exporter.
 - Spelling fixes in the docs.

0.04 2010-06-23

 - Use Dist::Zilla to build distro.

0.03 2009-06-25

 - Output tile_x and tile_y as floats.
 - Move pixel xy calculation in to the new gmap_tile_xy().
 - New function to convert zoom levels called zoom_gmap_tile().

0.02 2009-04-16

 - Doc fixes that were fooing the cpan.

0.01 2009-04-15

 - First release.
