@@ -4,6 +4,8 @@ Revision history for Perl extension Geo-Coordinates-GMap.
 
  - Require perl 5.8.1.
  - Simplify VERSION declarations.
+ - Add missing SUPPORT blurb.
+ - Provide a .editorconfig instead of .lvimrc.
 
 0.08 2019-02-18T06:22:07Z
 
